Undoing an NLA strip duplication leaves the duplicated NLA strip in an unexpected state #97559

Closed
opened 2022-04-23 07:09:45 +02:00 by Colin Basnett · 10 comments
Member

System Information
Operating system: Windows 10
Graphics card: NVIDIA GTX 1070

Blender Version
Broken: 3.1.0
Worked: Probably never

Short description of error
Undoing an NLA strip duplication does not work as expected. It puts the copied NLA strip back into its intermediate "meta" state.

This is presumably because the strip duplication actually performs two operations, so in order to fully undo the operation, you have to undo twice.

The expected behavior here is to fully undo the duplication of the strip.

nlastripduplicateundo.mp4

Exact steps for others to reproduce the error

  1. Create an NLA strip.
  2. Duplicate the NLA strip with Shift+D, then left-click to confirm the location of the new strip.
  3. Press Ctrl+Z to undo.
  4. Observe the state of the duplicated strip.
**System Information** Operating system: Windows 10 Graphics card: NVIDIA GTX 1070 **Blender Version** Broken: 3.1.0 Worked: Probably never **Short description of error** Undoing an NLA strip duplication does not work as expected. It puts the copied NLA strip back into its intermediate "meta" state. This is presumably because the strip duplication actually performs two operations, so in order to fully undo the operation, you have to undo twice. The expected behavior here is to fully undo the duplication of the strip. [nlastripduplicateundo.mp4](https://archive.blender.org/developer/F13017372/nlastripduplicateundo.mp4) **Exact steps for others to reproduce the error** 1. Create an NLA strip. 2. Duplicate the NLA strip with Shift+D, then left-click to confirm the location of the new strip. 3. Press Ctrl+Z to undo. 4. Observe the state of the duplicated strip.
Author
Member

Added subscriber: @cmbasnett

Added subscriber: @cmbasnett
Member

Added subscriber: @BClark

Added subscriber: @BClark
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Getting the same behavior here when I test it, a single UNDO doesn't work to get back to the pre-duplicated state.

Getting the same behavior here when I test it, a single UNDO doesn't work to get back to the pre-duplicated state.

Added subscriber: @mont29

Added subscriber: @mont29

The NLA code is doing this operation the wrong way, it should instead define a macro for those composite operations, see e.g. ED_operatormacros_object in object_ops.c.

The NLA code is doing this operation the wrong way, it should instead define a macro for those composite operations, see e.g. `ED_operatormacros_object` in `object_ops.c`.

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Colin Basnett was assigned by Sybren A. Stüvel 2022-07-12 11:58:56 +02:00

Feel free to claim a task when you're working on it @cmbasnett :)

Feel free to claim a task when you're working on it @cmbasnett :)

This issue was referenced by 2f834bfc14

This issue was referenced by 2f834bfc14824c224f99ab7d9a9e561fa86aef6b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97559
No description provided.